<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/icon_journal"
            android:title="@string/navigation_journal"/>
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/icon_categories"
            android:title="@string/navigation_categories"/>
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/icon_accounts"
            android:title="@string/navigation_accounts"/>
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/icon_statistics"
            android:title="@string/navigation_statistics"/>
    </group>
    <group
        android:checkableBehavior="none"
        android:id="@+id/nav_menu_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/navigation_settings"/>
    </group>
</menu>